# Data-Structures-And-Algorithms

Doubly Linked List reprezented with vectors/: App.cpp  CMakeLists.txt  IteratorLP.cpp  IteratorLP.h  Lista.cpp  Lista.h  TestExtins.cpp  TestScurt.cpp  pseudocod  vector.h
Orderly Collection/: Colectie.cpp  Colectie.h  IteratorColectie.cpp  IteratorColectie.h  TestExtins.cpp  TestScurt.cpp  pula
Orderly Doubly Linked List/: App.cpp  CMakeLists.txt  Iterator.cpp  LO.cpp  LO.h  TestScurt.cpp  TestScurt.h  filtreazaaaa.txt
